--- a/estilos/style.css
+++ b/estilos/style.css
@@ -57,4 +57,5 @@ section#redes-sociais img:hover {
     border: 2px solid rgba(255, 255, 255, 0.582);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px black;
+    transition: transform .5s;
 }
